--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -98,20 +98,21 @@
                 android:text="TextView   "
                 android:textSize="14dp"
                 android:textStyle="bold" />
-        </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:text="Lista de Sonidos"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="0"
+                android:textStyle="bold" />
+        </LinearLayout>
 
         <CheckBox
             android:id="@+id/checkBox"
-            android:layout_width="match_parent"
+            android:layout_width="137dp"
             android:layout_height="wrap_content"
             android:onClick="itemClicked"
             android:text="Latigo" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
